--- a/templates/ejercicio2.html
+++ b/templates/ejercicio2.html
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>ejercicio 2</title>
+    <link rel="stylesheet" href="/static/css/estilos.css">
 </head>
 <body>
-$END$
+    <div class="container">
+        <form action="/ejercicio2" method="POST">
+        <div class="form-group centrado">
+            <label for="nombre1">Nombre 1:</label>
+            <input type="text" name="nombre1">
+        </div>
+         <div class="form-group centrado">
+            <label for="nombre2">Nombre 2:</label>
+            <input type="text" name="nombre2">
+        </div>
+         <div class="form-group centrado">
+            <label for="nombre3">Nombre 3:</label>
+            <input type="text" name="nombre3">
+        </div>
+
+        <div class="form-group centrado">
+            <input type="submit" value="Enviar">
+        </div>
+          <div class="centrado">
+            <p> {{ nombre }}</p>
+             <p> {{ largo }} </p>
+        </div>
+    </form>
+    </div>
+
 </body>
 </html>
