--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Unidad 3</title>
+     <link rel="stylesheet" href="/static/css/estilos.css">
 </head>
 <body>
-$END$
+<div class="container centrado">
+    <a href="ejercicio1"><button>ejercicio 1</button></a>
+    <div class="espacio"></div>
+    <a href="ejercicio2"><button>ejercicio 2</button></a>
+
+</div>
 </body>
 </html>
